cmake_minimum_required(VERSION 3.13)
project(mobile3d)
set(OpenCV_DIR "/home/leo/build")
set(CMAKE_CXX_STANDARD 14)
include_directories(include)
file(GLOB SOURCES "src/*.cpp")
FIND_PACKAGE( OpenCV REQUIRED )
add_executable(mobile3d ${SOURCES})
TARGET_LINK_LIBRARIES (mobile3d ${OpenCV_LIBS})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
set(CMAKE_BUILD_TYPE Debug)
